MON-132 use Long as index for companyId